@@ -26324,12 +26324,31 @@ class PerlOp {
         }
         return offset3;
     }
+    private static int _regex_skip_comment(int offset, String s, int length) {
+        // [ ... ]
+        int offset3 = offset;
+        for ( ; offset3 < length; ) {
+            final int c3 = s.codePointAt(offset3);
+            switch (c3) {
+                case ' . chr(39) . ')' . chr(39) . ':
+                    return offset3;
+                case ' . chr(39) . '\\\\' . chr(39) . ':
+                    offset3++;
+                    break;
+                default:
+                    break;
+            }
+            offset3++;
+        }
+        return offset;  // possible error - end of comment not found
+    }
 
-    // escape rules:
+    // regex escape rules:
     //
     // \\[       as-is
     // [xx xx]  becomes: [xx\\ xx] - this will make sure space is a token, even when /x modifier is set
     // \\120     becomes: \\0120 - Java requires octal sequences to start with zero
+    // (?#...)  inline comment is removed
     //
     public static String character_class_escape(String s) {
         // escape spaces in character classes
@@ -26365,6 +26384,21 @@ class PerlOp {
                             sb.append(Character.toChars(c));
                             offset++;
                             offset = _character_class_escape(offset, s, sb, length);
+                            break;
+                case ' . chr(39) . '(' . chr(39) . ':   // comment (?# ... )
+                            if (offset < length - 2) {
+                                int c2 = s.codePointAt(offset+1);
+                                int c3 = s.codePointAt(offset+2);
+                                if (c2 == ' . chr(39) . '?' . chr(39) . ' && c3 == ' . chr(39) . '#' . chr(39) . ') {
+                                    offset = _regex_skip_comment(offset, s, length);
+                                }
+                                else {
+                                    sb.append(Character.toChars(c));
+                                }
+                            }
+                            else {
+                                sb.append(Character.toChars(c));
+                            }
                             break;
                 default:    // normal char
                             sb.append(Character.toChars(c));
